# otsdaq-mu2e-trigger

./: .git_whitespace_exclude  .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: auto_approve.yml  git-whitespace.yml  mu2e-build-single-pkg.yml  mu2e-develop-cpp-ci.yml  mu2e-format-single-pkg.yml  mu2e-test-single-pkg.yml  mu2e-tidy-single-pkg.yml  track_new_issues.yml  track_new_prs.yml
UserWebGUI/html/: ConfigurationAPI_exampleApp.html  NimPlus_app.html  SmartLaunch.html
otsdaq-mu2e-trigger/: CMakeLists.txt
otsdaq-mu2e-trigger/ArtModules/: CMakeLists.txt  LumiStreamFilter_module.cc  Mu2ePrescaler_module.cc
otsdaq-mu2e-trigger/ArtModules/detail/: Subsystem.hh
otsdaq-mu2e-trigger/ArtModules/test/: lumi_stream.fcl
otsdaq-mu2e-trigger/TablePluginDataFormats/: OfflineDatabaseTable.h  OfflineDatabaseTable_table.cc  TriggerConfigTable.h  TriggerConfigTable_table.cc
otsdaq-mu2e-trigger/TablePlugins/: CMakeLists.txt  DBServiceTable.h  DBServiceTable_table.cc  OfflineDatabaseTable.h  OfflineDatabaseTable_table.cc  TriggerConfigTable.h  TriggerConfigTable_table.cc
